Fix header / footer render issues on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -20,6 +20,59 @@
 
     // Positioning context for the mobile navigation icon
     position: relative;
+
+    > .site-links {
+        .fa-bars {
+            color: $grey-color-light;
+        }
+
+        .menu-icon {
+            display: none;
+        }
+
+        @include media-query($on-mobile) {
+            position: absolute;
+            top: 9px;
+            right: 10px;
+            @include border-radius(5px);
+            text-align: right;
+            border: 1px solid transparent;
+
+            z-index: 1;
+
+            .menu-icon {
+                display: block;
+                float: right;
+                width: 36px;
+                height: 24px;
+                line-height: 0;
+                padding-top: 10px;
+                text-align: center;
+            }
+
+            .site-link {
+                display: block;
+                line-height: 200%;
+                text-align: left;
+                margin: 0px 10px;
+            }
+
+            .trigger {
+                clear: both;
+                display: none;
+            }
+
+            &:hover .trigger {
+                display: block;
+                padding-bottom: 5px;
+            }
+
+            &:hover {
+                background-color: lighten($title-bar-bg, 5%);
+                border: 1px solid $grey-color-dark;
+            }
+        }
+    }
 }
 
 .site-title-area {
@@ -41,11 +94,6 @@
 .site-subtitle {
     font-family: $title-font-family;
     font-size: $title-font-size * .6;
-
-    // Makes the title too long on thin screens
-    @include media-query($on-mobile) {
-        display: none;
-    }
 }
 
 .site-links {
@@ -61,62 +109,6 @@
         }
     }
 
-    .fa-bars {
-        color: $grey-color-light;
-    }
-
-    .menu-icon {
-        display: none;
-    }
-
-    @include media-query($on-mobile) {
-        position: absolute;
-        top: 9px;
-        right: 0px;
-        @include border-radius(5px);
-        text-align: right;
-        border: 1px solid transparent;
-
-        z-index: 1;
-
-        .menu-icon {
-            display: block;
-            float: right;
-            width: 36px;
-            height: 24px;
-            line-height: 0;
-            padding-top: 10px;
-            text-align: center;
-        }
-
-        .nav-link {
-            display: block;
-            line-height: 200%;
-            text-align: left;
-            margin: 0px 10px;
-        }
-
-        .trigger {
-            clear: both;
-            display: none;
-        }
-
-        &:hover .trigger {
-            display: block;
-            padding-bottom: 5px;
-        }
-
-        &:hover {
-            background-color: lighten($title-bar-bg, 5%);
-            border: 1px solid $grey-color-dark;
-        }
-
-        .page-link {
-            display: block;
-            padding: 5px 10px;
-        }
-    }
-
     @include hide-on-printer()
 }
 
@@ -125,7 +117,8 @@
  */
 .site-footer {
     position: absolute;
-    padding: 0px 10px;
+    padding-top: 0px;
+    padding-bottom: 0px;
     bottom: 0;
     left: 0;
     right: 0;
